2018-01-23 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSApplication.m (-targetForAction:to:from:): Warn about
	the target not responding to the action.
	* Source/NSSavePanel.m (_initWithoutGModel): Don't set the OK
	button as the target of the browser. Use helper method instead.

2018-01-22 Gregory John Casamento <greg.casamento@gmail.com>

	* Tools/speech/GSSpeechSynthesizer.m: Correct compilation
	error in for loop in connectionDied: method.

2018-01-21 Fred Kiefer <FredKiefer@gmx.de>

	* Tools/speech/GNUmakefile: Remove specific OBJC flags.
	Fixes bug #46939.

2018-01-14 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSMenu.m (-update): Restructure by splitting up into two
	helper methods.
	* Source/NSMenu.m (-performKeyEquivalent:): Use new helper method
	to only autoenable menu item with matching key equivalent.

2018-01-14 Fred Kiefer <FredKiefer@gmx.de>

	* Source/GSLayoutManager.m
	(-glyphRangeForCharacterRange:actualCharacterRange:): Try to
	handle attachments at the end of the file more graceful.

2018-01-07 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSView.m (-_rebuildCoordinates): Use simple path only
	when both window and superview are nil. Set the visibleRect in
	this case to bounds.

2018-01-07 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSApplication.m (-targetForAction:to:from:): Return nil
	if the target is non-nil but does not respond to the action.

2018-01-01 Fred Kiefer <FredKiefer@gmx.de>

	* Printing/GSCUPS/GSCUPSPrinter.m,
	* Printing/GSCUPS/GSCUPSPrintInfo.m:
	Restore -allocWithZone: methods as this is needed to override
	behaviour in superclass.

2018-01-01  Yavor Doganov <yavor@gnu.org>

	* Documentation/make_services.1: Typo fix.

2018-01-01 Fred Kiefer <FredKiefer@gmx.de>

	* config/pkg.m4: Update to serial 12.
	* Headers/Additions/GNUstepGUI/config.h.in,
	* configure: Regnerate
	Fixes bug #52779.
	Patch by Yavor Doganov <yavor@gnu.org>

2017-12-31 Ivan Vucica <ivan@vucica.net>

	* Documentation/announce.texi
	* Documentation/news.texi