@@ -1,3 +1,9 @@
+2018-01-24 Fred Kiefer <FredKiefer@gmx.de>
+
+	* Printing/GSCUPS/GSCUPSPrintOperation.m:
+	Restore -allocWithZone: methods as this is needed to override
+	behaviour in superclass.
+
 2018-01-23 Fred Kiefer <FredKiefer@gmx.de>
 
 	* Source/NSApplication.m (-targetForAction:to:from:): Warn about
